--- a/student-store-ui/src/components/ProductCard/ProductCard.css
+++ b/student-store-ui/src/components/ProductCard/ProductCard.css
@@ -2,9 +2,18 @@
   height: 330px;
   width: 250px;
   background: var(--pure-white);
+  /* background: #e7dacd; */
+
   display: flex;
   flex-direction: column;
-  border: solid 1px var(--border-color);
+  /* border: solid 1px var(--border-color); */
+  /* border: solid 1px rgb(149, 145, 145); */
+  border: solid 1px white;
+  box-shadow: 0px 0px 4px ;
+  border-radius: 12px;
+}
+.pro-image{
+  border-radius: 12px;
 }
 .ProductCard .media {
   height: 250px;
