--- a/student-store-ui/src/components/ProductDetail/ProductDetail.css
+++ b/student-store-ui/src/components/ProductDetail/ProductDetail.css
@@ -6,6 +6,7 @@
   flex-direction: column;
   align-items: center;
   padding-bottom: 50px;
+  
 }
 
 .ProductDetail .product-card {
@@ -14,10 +15,13 @@
   background: var(--pure-white);
   display: flex;
   flex-direction: column;
-  border: solid 1px var(--border-color);
+  /* border: solid 1px var(--border-color); */
   margin: 0 auto;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  border: solid 1px white;
+  box-shadow: 0px 0px 4px ;
+  border-radius: 12px;
 }
 
 .ProductDetail .media {
