--- a/student-store-ui/src/components/SubNavbar/SubNavbar.css
+++ b/student-store-ui/src/components/SubNavbar/SubNavbar.css
@@ -41,6 +41,7 @@
   height: 40px;
   width: 40px;
   background: var(--bright-green);
+  border-radius: 1.5px;
   color: white;
   fill: white;
   display: flex;
