--- a/student-store-ui/src/globals.css
+++ b/student-store-ui/src/globals.css
@@ -4,9 +4,14 @@
   --side-padding: 40px;
   --content-width: 1100px;
   --dark-blue: #2c4047;
-  --bright-green: #00c385;
+  /* --bright-green: #00c385; */
+  --bright-green: #ddb892;
+  /* --pure-white: #fff; */
   --pure-white: #fff;
-  --grey-bg: #f7f7f7;
+
+  /* --grey-bg: #f7f7f7; */
+  --grey-bg: #e7dfd7;
+
   --accent-orange: #ff9017;
   --bright-red: #fe3210;
   --muted: #969696;
@@ -15,6 +20,7 @@
   --border-color: #e4e4e4;
   --star-color-filled: #e5a800;
   --star-color-empty: #cbd4e6;
+  /* --standard-brown: #ddb892; */
 }
 
 body {
