--- a/student-store-ui/src/components/CheckoutSuccess/CheckoutSuccess.css
+++ b/student-store-ui/src/components/CheckoutSuccess/CheckoutSuccess.css
@@ -4,7 +4,8 @@
 }
 
 .CheckoutSuccess > h3 {
-  color: white;
+  /* color: white; */
+  color: #9a8065;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,20 +15,24 @@
   margin-left: 10px;
 }
 .CheckoutSuccess p {
-  color: white;
+  /* color: white; */
+  
+  
 }
 .CheckoutSuccess .card {
-  color: white;
+  /* color: white; */
   display: flex;
   flex-direction: column;
 }
 .CheckoutSuccess .card .card-title {
-  color: white;
+  /* color: white; */
+  
   font-weight: 20px;
   margin-bottom: 5px;
 }
 .CheckoutSuccess .purchase .header {
-  color: white;
+  /* color: white; */
+  color: #9a8065;
   font-weight: 600;
   text-align: center;
   margin: 10px 0;
@@ -36,7 +41,8 @@
   padding-left: 20px;
 }
 .CheckoutSuccess .purchase li {
-  color: white;
+  /* color: white; */
+  color: #9a8065;
 }
 .CheckoutSuccess button {
   margin: 10px;
@@ -44,6 +50,8 @@
   font-size: 18px;
   cursor: pointer;
   background: transparent;
-  border: solid 1px white;
-  color: white;
+  /* border: solid 1px white; */
+  border: solid 1px rgb(0, 0, 0);
+
+  /* color: white; */
 }
