--- a/student-store-ui/src/components/PaymentInfo/PaymentInfo.css
+++ b/student-store-ui/src/components/PaymentInfo/PaymentInfo.css
@@ -2,7 +2,8 @@
   padding: 16px;
 }
 .PaymentInfo > h3 {
-  color: white;
+  /* color: white; */
+  color: #9a8065;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -11,7 +12,7 @@
   margin-left: 10px;
 }
 .PaymentInfo .label {
-  color: white;
+  /* color: white; */
 }
 .PaymentInfo .is-danger {
   color: var(--bright-red);
@@ -21,7 +22,8 @@
   margin: 5px 0;
 }
 .PaymentInfo .input-field .label {
-  color: white;
+  /* color: white; */
+  
 }
 .PaymentInfo .input-field .control {
   width: 100%;
@@ -32,7 +34,8 @@
   height: 36px;
   padding: 0 15px;
   border-radius: 8px;
-  border: solid 1px #e4e4e4;
+  border: solid 1px #030303;
+
   flex: 1;
   font-size: 16px;
 }
@@ -42,6 +45,5 @@
   font-size: 18px;
   cursor: pointer;
   background: transparent;
-  border: solid 1px white;
-  color: white;
+  border: solid 1px rgb(0, 0, 0);
 }
