--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -10,13 +10,13 @@
   top: 0px;
   height: 100vh;
   padding: 0;
-  overflow-y: scroll;
   padding-bottom: 2rem;
   background: var(--dark-blue);
-  border-right: solid 1px white;
+  border-right: solid 1px var(--bright-green);
+
 }
 .Sidebar.closed {
-  width: 60px;
+  width: 55px;
 }
 .Sidebar.open {
   width: 575px;
@@ -31,10 +31,9 @@
   margin-top: 20px;
   transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
-/* .Sidebar .toggle-button i {
-  color: white;
+.Sidebar .toggle-button i {
   cursor: pointer;
-} */
+}
 .Sidebar .toggle-button.open {
   transform: rotateY(180deg);
 }
@@ -42,5 +41,5 @@
 .Sidebar i {
   margin-right: 10px;
   cursor: pointer;
-  color: white;
+  color: #9a8065;
 }
