--- a/student-store-ui/src/globals.css
+++ b/student-store-ui/src/globals.css
@@ -3,13 +3,11 @@
 :root {
   --side-padding: 40px;
   --content-width: 1100px;
-  --dark-blue: #2c4047;
-  /* --bright-green: #00c385; */
-  --bright-green: #ddb892;
-  /* --pure-white: #fff; */
-  --pure-white: #fff;
 
-  /* --grey-bg: #f7f7f7; */
+  --dark-blue: #ffffff;
+  --bright-green: #9a8065;;
+  
+  --pure-white: #fff;
   --grey-bg: #e7dfd7;
 
   --accent-orange: #ff9017;
